@@ -1,3 +1,4 @@
+7/14/14 remove weird couplings where HorizontalAligner was providing information about vertical dimension
 7/14/14 completed HorizontalAligner refactor
 7/14/14 first phase of HorizontalAligner refactor
 7/14/14 internal cleanup of HorizontalAligner
